# RAGEmini

./: .env.sample  README.md  install.sh  pyproject.toml  rage.py  requirements.txt
RAGE/: aglm.py  dataloader.py  inference.py
src/: geminapi.py
